[build-system]
requires = ["setuptools", "setuptools-scm"]

[project]
name = "rastertoolkit"
dynamic = ["version"]
description = "Raster and shape tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Kurt Frey", email="kurt.frey@gatesfoundation.org" },
    { name="Dejan Lukacevic", email="dejan.lukacevic@gatesfoundation.org" },
    { name="Katherine Rosenfeld", email="katherine.rosenfeld@gatesfoundation.org" }
]
keywords = ['modeling', 'IDM']
dependencies = [
    "matplotlib~=3.9",
    "pyshp~=2.3",
    "pyproj~=3.6",
    "scikit-learn~=1.5",
    "shapely~=2.0",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
    "mkdocs-jupyter",
]
lint = [
    "flake8",
]
test = [
    "pytest",
]

[project.urls]
Documentation = "https://institutefordiseasemodeling.github.io/RasterToolkit/"
Repository = "https://github.com/InstituteforDiseaseModeling/RasterToolkit"
Issues = "https://github.com/InstituteforDiseaseModeling/RasterToolkit/issues"

[tool.setuptools.dynamic]
version = {attr = "rastertoolkit.version.__version__"}
