[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rastertoolkit"
version = "0.4.9"
description = "Raster and shape tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Kurt Frey", email = "kurt.frey@gatesfoundation.org"},
    {name = "Dejan Lukacevic", email = "dejan.lukacevic@gatesfoundation.org"},
    {name = "Katherine Rosenfeld", email = "katherine.rosenfeld@gatesfoundation.org"},
]
keywords = ['modeling', 'IDM']
dependencies = [
    "matplotlib~=3.9",
    "pyshp~=3.0",
    "pyproj~=3.6",
    "scikit-learn~=1.6",
    "shapely~=2.0",
    "tifffile[all]~=2025.0",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
    "mkdocs-jupyter",
]
lint = [
    "flake8",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[project.urls]
Documentation = "https://institutefordiseasemodeling.github.io/RasterToolkit/"
Repository = "https://github.com/InstituteforDiseaseModeling/RasterToolkit"
Issues = "https://github.com/InstituteforDiseaseModeling/RasterToolkit/issues"

[tool.bumpversion]
current_version = "0.4.9"
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
